--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="estudante">
             <h2 class="estudante-titulo">quem sou</h2>
             <div class="estudante-div">
-                <img src="img/lohanny.jpg" alt="foto da lohanny" class="estudante-imagem">
+                <img src="img/lohanny.jpeg" alt="foto da lohanny" class="estudante-imagem">
                 <h3 class="estudante-nome">Lohanny Martins Salles</h3>
                 <img src="img/github.png"
                 <img src="img/instagram.png"
