--- a/index.html
+++ b/index.html
@@ -16,7 +16,26 @@
 
     <body>
         <header class="cabecalho">
+            <div class="container">
+            <input type="checkbox" id="menu" class="container_botao">
+            <label for="menu" >
+                <span class="cabecalho__menu  container__imagem"> </span>
+            </label>
+
+            <ul class="cabecalho-lista">
+                <li class="cabecalho-lista-titulo"> categorias </li>
+                <li class="cabecalho-lista-item"> <a href="#" clas="menu__lista-item"> Serviços</a></li>
+                <li class="cabecalho-lista-item"> <a href="#" clas="menu__lista-item"> Projetos</a></li>
+                <li class="cabecalho-lista-item"> <a href="#" clas="menu__lista-item"> Contato </a></li>
+            </ul>
+            
             <img  class="cabecalho-imagem"  src="img/alurastart_logo.png" alt="logo AluraStart">
+            <h1 class="container-titulo">doceria da loh </h1>
+        </div>
+        
+            <a href="#"> <img src="img/favoritos.svg" alt=""> </a>
+            <a href="#"> <img src="img/compras.svg" alt=""> </a>
+            <a href="#"> <img src="img/usuario.svg" alt=""> </a>
 
             <ul class="cabecalho-lista"  >
                 <li class="cabecalho-lista-item" >Escola</li>
