--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
             <img  class="cabecalho-imagem"  src="img/alurastart_logo.png" alt="logo AluraStart">
             <h1 class="container-titulo">doceria da loh </h1>
         </div>
+
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu"  claas="opcoes__botao">
+            <label for="opcoes-menu"> 
+                <li class="opcoes__item" CATEGORIAS REVER </li>
+            </label>
+
+        </ul class="cabecalho-lista">
+
+        </ul>
         
             <a href="#"> <img src="img/favoritos.svg" alt=""> </a>
             <a href="#"> <img src="img/compras.svg" alt=""> </a>
