--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li class="cabecalho-lista-item"> <a href="#" clas="menu__lista-item"> Contato </a></li>
             </ul>
             
-            <img  class="cabecalho-imagem container imagem "  src="img/alurastart_logo.png" alt="logo AluraStart">
+            <img  class="cabecalho-imagem container imagem "  src="img/logo.png" alt="logo AluraStart">
             <h1 class="container-titulo">doceria da loh </h1>
         </div>
 
