--- a/index.html
+++ b/index.html
@@ -128,7 +128,19 @@
         </footer>
         
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-       
+        script>
+        <script>
+        const swiper=new Swiper (".swiper" , {
+            spaceBetween:10,
+            slidesPerView:1,
+
+            pagination:(
+                el:".swiper-pagination",
+                type: "bullets" ,
+            },
+        });
+    </script>
+
     </body>
 
     </html>
