--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
             spaceBetween:10,
             slidesPerView:1,
 
-            pagination:(
-                el:".swiper-pagination",
-                type: "bullets" ,
+            pagination:{
+                el:'.swiper-pagination',
+                type: 'bullets' ,
             },
         });
     </script>
