--- a/index.html
+++ b/index.html
@@ -45,19 +45,23 @@
             </label>
 
         </ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">
-            <a href="#" class="menu__lista-item">opçao 1</a>
-        <li class="cabecalho-lista-item">
-            <a href="#" class="menu__lista-item">opçao 2</a>
-        <li class="cabecalho-lista-item">
-            <a href="#" class="menu__lista-item">opçao 3</a>
-        </li>
+            <li class="cabecalho-lista-item">
+                <a href="#" class="menu__lista-item">opçao 1</a>
+            </li>
+            <li class="cabecalho-lista-item">
+                <a href="#" class="menu__lista-item">opçao 2</a>
+            </li>
+            <li class="cabecalho-lista-item">
+                <a href="#" class="menu__lista-item">opçao 3</a>
+            </li>
 
         </ul>
 
-        <li class="opcoes__item"><a href="#" class="opçoes__link"> Escola</a> </li>
-        <li class="opcoes__item"><a href="#" class="opçoes__link"> Estudante</a> </li>
+            <li class="opcoes__item"><a href="#" class="opçoes__link"> Escola</a> </li>
+            <li class="opcoes__item"><a href="#" class="opçoes__link"> Estudante</a> </li>
+        
         </ul>
+        
         <div class="container">
             <a href="#"> <img class="cabecalho-imagem  cabecalho__favorito" src=".img/favoritos.svg"
                     alt="meus favoritos"> </a>
@@ -73,6 +77,7 @@
 
 
     </header>
+</div>
 
     <section class="escola">
         <div class="escola-div-conteudo">
@@ -171,7 +176,7 @@
 
                 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
                 <script>
-                    const swiper = new Swiper(".swiper", {
+                    const swiper = new Swiper('.swiper', {
                         spaceBetween: 10,
                         slidesPerView: 1,
 
