--- a/index.html
+++ b/index.html
@@ -132,15 +132,17 @@
                     </div>
 
                     <img src="./img/promocao.png" alt="Foto da promoçao" class="descriçao__imagem">
+                    
+                </div>
 
-                    <div class="card_botoes">
-                        <ul class="botoes">
-                            <li class="botoes__item">
-                                <img src="./img/favoritos.svg" alt="Favoritar produto" 
-                            </li>
-                            <li class="botoes__item">
-                                <img src="./img/compras.svg" alt "adicionar ao carrinho de compras"
-                             </li>
+                 <div class="card_botoes">
+                    <ul class="botoes">
+                         <li class="botoes__item">
+                                <img src="./img/favoritos.svg" alt="Favoritar produto" >
+                        </li>
+                         <li class="botoes__item">
+                                <img src="./img/compras.svg" alt="adicionar ao carrinho de compras">
+                        </li>
                         </ul>
 
                         <a href="#" class="botoes__ancora">Saiba mais</a>
@@ -158,16 +160,11 @@
                     <div class="estudante-div">
                         <img src="img/lohanny.jpeg" alt="foto da lohanny" class="estudante-imagem">
                         <h3 class="estudante-nome">Lohanny Martins Salles</h3>
-                        <a href="https://github.com/martins-lohanny/segundo-repositorio.git"> <img src="img/github.png"
-                                alt="icone do github" class="estudante-icone"> </a>
- 
-                        <a href="https://instagram.com/martins-lohanny"> <img src="img/instagram.png"
-                                alt="icone do instagram" class="estudante-icone"> </a>
-
-                        <a href="https://wa.me/5541995377757""> <img src=" img/whatsapp.png" alt="icone do whatsapp"
-                            class="estudante-icone"> <a>
+                        <a href="https://github.com/martins-lohanny/segundo-repositorio.git"> <img src="img/github.png"alt="icone do github" class="estudante-icone"> </a>
+                        <a href="https://instagram.com/martins-lohanny"> <img src="img/ins"adicionar ao carrinho de compras"
+                        </li>tagram.png"alt="icone do instagram" class="estudante-icone"> </a>
+                        <a href="https://wa.me/5541995377757""> <img src=" img/whatsapp.png" alt="icone do whatsapp"class="estudante-icone"> <a>
                     </div>
-
                 </section>
 
                 <footer class="rodape">
@@ -176,7 +173,8 @@
 
                 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
                 <script>
-                    const swiper = new Swiper('.swiper', {
+                    const swiper = new Swiper('.swiper', {"adicionar ao carrinho de compras"
+                             </li>
                         spaceBetween: 10,
                         slidesPerView: 1,
 
