--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
 
                 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
                 <script>
-                    const swiper = new Swiper('.swiper', {"adicionar ao carrinho de compras"
-                             </li>
+                    const swiper = new Swiper('.swiper', {
                         spaceBetween: 10,
                         slidesPerView: 1,
 
