--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ul>
         
         <div class="container">
-            <a href="#"> <img class="cabecalho-imagem  cabecalho__favorito" src=".img/favoritos.svg" alt="meus favoritos"> </a>
+            <a href="#"> <img class="cabecalho-imagem  cabecalho__favorito" src="img/favoritos.svg" alt="meus favoritos"> </a>
             <a href="#"> <img class="container__link">
                 <img class="cabecalho-imagem" src="img/compras.svg" alt="carrinho de compras">
                 <p class="container__texto"> minha sacola </p>
