--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <section class="estudante">
         <h2 class="estudante-titulo">quem sou</h2>
         <div class="estudante-div">
-            <img src="img/lohanny.jpeg" alt="foto da lohanny" class="estudante-imagem">
+            <img src="img/lohanny.png" alt="foto da lohanny" class="estudante-imagem">
             <h3 class="estudante-nome">Lohanny Martins Salles</h3>
             <a href="https://github.com/martins-lohanny/segundo-repositorio.git"> <img src="img/github.png"alt="icone do github" class="estudante-icone"> </a>
             <a href="https://instagram.com/martins-lohanny"> <img src="img/ins"adicionar ao carrinho de compras"
