--- a/index.html
+++ b/index.html
@@ -89,6 +89,57 @@
 
     </section>
 
+    <section class="flashcard" id="flashcard  >"
+        
+        <article class="cartao">
+            <div class="cartao_conteudo"
+                <h3>Missão</h3>
+
+                <div class="cartao_conteudo_pergunta">
+                   <p> Saiba qual e a missao de nossa empresa! </p>
+                </div>
+
+                <div class="cartao_conteudo_resposta">
+                    <p>Nossa missao e... </p>
+                </div>
+            </div>
+
+            <div class="cartao_conteudo"
+                <h3>Visão</h3>
+
+                <div class="cartao_conteudo_pergunta">
+                    <p>Saiba a visao de nossa empresa!</p>
+                </div>
+
+                <div class="cartao_conteudo_resposta">
+                    <p> Nossa visao é...</p>
+                </div>
+            </div>
+
+            <div class="cartao_conteudo"
+                <h3>Valores</h3>
+
+                <div class="cartao_conteudo_pergunta">
+                    <p>Saiba quais são os valores de nossa empresa!</p>
+                </div>
+
+                <div class="cartao_conteudo_resposta">
+                    <p>Nossos valores são...</p>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+         </article>
+    </section>
+
     <section class="carrossel">
 
         <h2 class="carrossel_titulo">Nossos Produtos</h2>
