--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
 />
-
+            <a href="#"> <img  class="cabecalho-imagem cabecalho__favorito" src="./img/favoritos.svg" alt="Meus favoritos"> </a>
+            <a href="#" class="container__link" >
+                <img class="cabecalho-imagem" src="./img/compras.svg" alt="Carrinho de compras">
+                <p class="container__texto"> Minha Sacola </p>
+            </a>
+            <a href="#" class="container__link" >
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
       
     <link rel="stylesheet" href="style.css">
@@ -22,7 +27,12 @@
 </head>
 
 <body>
-    <header class="cabecalho">
+    <header class="cabecalho">"./img/favoritos.svg" alt="Meus favoritos"> </a>
+        <a href="#" class="container__link" >
+            <img class="cabecalho-imagem" src="./img/compras.svg" alt="Carrinho de compras">
+            <p class="container__texto"> Minha Sacola </p>
+        </a>
+        <a href="#" class="container__link" >
         <div class="container">
             <input type="checkbox"  id="menu"    class="container__botao">
             <label for="menu">
@@ -70,7 +80,7 @@
                 <p class="container__texto"> Minha Sacola </p>
             </a>
             <a href="#" class="container__link" >
-                <img  class="cabecalho-imagem"  src="img/usuario.svg" alt="Meu Perfil">
+                <img  class="cabecalho-imagem"  src="img/favoritos.svg" alt="Meu Perfil">
                 <p class="container__texto" >Meu Perfil</p>
             </a>
         </div>
@@ -209,7 +219,7 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Quem sou</h2>
         <div class="estudante-div">
-            <img src="img/lohanny.png" alt="foto da Lohanny" class="estudante-imagem">
+            <img src="img/lohannysallesqss.jpeg" alt="foto da Lohanny" class="estudante-imagem">
             <h3 class="estudante-nome"> Gerson Cesar Grobe de Miranda </h3>
             <a href="https://github.dev/martins-lohanny/segundo-repositorio"> <img src="img/github.svg" alt="icone do github" class="estudante-icone"> </a>
             <a href="https://www.instagram.com/martins_lohanny/"> <img src="img/instagram.svg" alt="icone do instagram" class="estudante-icone"> </a>
