--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <p class="escola-texto-dois">A turma mais estudiosa e famosa é a segunda série, turma E. Nós somos super
             unidos e a turma favorita por todos os professores que nos ajudam!</p>
     </div>
-    <img src="img/Online learning-amico.svg" alt="imagem da escola" class="escola-imagem">
+    <img src="img/doceria.jpg" alt="imagem da confeitaria" class="doceria-imagem">
 
     </section>
 
@@ -220,7 +220,7 @@
         <h2 class="estudante-titulo">Quem sou</h2>
         <div class="estudante-div">
             <img src="img/lohannysallesqss.jpeg" alt="foto da Lohanny" class="estudante-imagem">
-            <h3 class="estudante-nome"> Gerson Cesar Grobe de Miranda </h3>
+            <h3 class="estudante-nome"> Lohanny Martins Salles </h3>
             <a href="https://github.dev/martins-lohanny/segundo-repositorio"> <img src="img/github.svg" alt="icone do github" class="estudante-icone"> </a>
             <a href="https://www.instagram.com/martins_lohanny/"> <img src="img/instagram.svg" alt="icone do instagram" class="estudante-icone"> </a>
             <a href="https://wa.me/5541995377757"> <img src="img/whatsapp.svg" alt="icone do whatsapp" class="estudante-icone"> </a>      
