--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
         <div class="estudante-div">
             <img src="img/lohannysallesqss.jpeg" alt="foto da Lohanny" class="estudante-imagem">
             <h3 class="estudante-nome"> Lohanny Martins Salles </h3>
-            <a href="https://github.dev/martins-lohanny/segundo-repositorio"> <img src="img/github.svg" alt="icone do github" class="estudante-icone"> </a>
-            <a href="https://www.instagram.com/martins_lohanny/"> <img src="img/instagram.svg" alt="icone do instagram" class="estudante-icone"> </a>
-            <a href="https://wa.me/5541995377757"> <img src="img/whatsapp.svg" alt="icone do whatsapp" class="estudante-icone"> </a>      
+            <a href="https://github.dev/martins-lohanny/segundo-repositorio"> <img src="img/github.png" alt="icone do github" class="estudante-icone"> </a>
+            <a href="https://www.instagram.com/martins_lohanny/"> <img src="img/instagram.png" alt="icone do instagram" class="estudante-icone"> </a>
+            <a href="https://wa.me/5541995377757"> <img src="img/whatsapp.png" alt="icone do whatsapp" class="estudante-icone"> </a>      
         </div>
     </section>
     
