--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </ul>
 
             <li class="opcoes__item"><a href="#" class="opcoes__link">  Escola  </a> </li>
-            <li claader></li> class="opcoes__item"><a href="#" class="opcoes__link">  Estudante  </a></li>
+            <li claader></li><a href="#" class="opcoes__link">  Estudante  </a></li>
 
         </ul>
 
