--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </ul>
 
             <li class="opcoes__item"><a href="#" class="opcoes__link">  Escola  </a> </li>
-            <li claader></li><a href="#" class="opcoes__link">  Estudante  </a></li>
+            <li class="opcoes_item"><a href="#" class="opcoes__link">  Estudante  </a></li>
 
         </ul>
 
@@ -73,15 +73,14 @@
     </header>
     <main>
         <section class="escola">
-
             <div class="escola-div-conteudo">
                 <h2 class="escola-titulo"> Sobre a Escola </h2>
             <p class="escola-texto-um"> A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento
                 Computacional, através de Programação. </p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a segunda série, turma E. Nós somos super
                 unidos e a turma favorita por todos os professores que nos ajudam!</p>
-            </div>
-            <img src="./img/doceria.jpg" alt="imagem da confeitaria" class="doceria-imagem">
+        </div>
+        <img src="./img/doceria.jpg" alt="imagem da confeitaria" class="doceria-imagem">
 
         </section>
 
