--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
                         <img src="./img/promocao.png" alt="Foto da promoção" class="descricao__imagem">
 
                     </div>
+                    <section class="escola">
+            
 
                     <div class="card__botoes">
                         <ul class="botoes">
