--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li class="cabecalho-lista-item"><a href="#" class="menu__lista-item"> Contato </a></li>
             </ul>
       
-            <img class="cabecalho-imagem  container__imagem" src="./img/alurastart_logo.png" alt="logo AluraStart">
+            <img class="cabecalho-imagem  container__imagem" src="img/logo.png" alt="logo Empresa">
             <h1 class="container-titulo"> Doceria da Loh</h1>
         </div>
 
@@ -206,7 +206,9 @@
 
         <section class="estudante">
             <h2 class="estudante-titulo">Quem sou</h2>
-            <div class="estudante-div">
+            <div class="estudante-div"><!DOCTYPE html>
+                <html lang="pt-br">
+                
                 <img src="img/lohannysallesqss.jpeg" alt="foto da Lohanny" class="estudante-imagem">
                 <h3 class="estudante-nome"> Lohanny Martins Salles </h3>
                 <a href="https://github.dev/martins-lohanny/segundo-repositorio"> <img src="img/github.png" alt="icone do github" class="estudante-icone"> </a>
