--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </main>
     
     <footer class="rodape">
-        <img src="img/alurastart_logo.png" alt="logo da alura" class="rodape-imagem">
+        <img src="img/logo.png" alt="logo da empresa" class="rodape-imagem">
     </footer>
     
     <script src="favorito.js" ></script>
