--- a/index.html
+++ b/index.html
@@ -180,7 +180,6 @@
                         <img src="./img/promocao.png" alt="Foto da promoção" class="descricao__imagem">
 
                     </div>
-                    <section class="escola">
             
 
                     <div class="card__botoes">
@@ -205,9 +204,7 @@
 
         <section class="estudante">
             <h2 class="estudante-titulo">Quem sou</h2>
-            <div class="estudante-div"><!DOCTYPE html>
-                <html lang="pt-br">
-                
+            <div class="estudante-div">
                 <img src="img/lohannysallesqss.jpeg" alt="foto da Lohanny" class="estudante-imagem">
                 <h3 class="estudante-nome"> Lohanny Martins Salles </h3>
                 <a href="https://github.dev/martins-lohanny/segundo-repositorio"> <img src="img/github.png" alt="icone do github" class="estudante-icone"> </a>
