--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
     <main>
         <section class="escola">
             <div class="escola-div-conteudo">
-                <h2 class="escola-titulo"> Sobre a Escola </h2>
-            <p class="escola-texto-um"> A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento
-                Computacional, através de Programação. </p>
+                <h2 class="escola-titulo"> Sobre minha empresa </h2>
+            <p class="escola-texto-um"> A empresa foi fundada em 2020 com intuição de fornecer produtos e serviços de altissima qualidade para proporcionar aos nossos clientes momentos especiais, de alegria </p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a segunda série, turma E. Nós somos super
                 unidos e a turma favorita por todos os professores que nos ajudam!</p>
         </div>
