--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
             <div class="escola-div-conteudo">
                 <h2 class="escola-titulo"> Sobre minha empresa </h2>
             <p class="escola-texto-um"> A empresa foi fundada em 2020 com intuição de fornecer produtos e serviços de altissima qualidade para proporcionar aos nossos clientes momentos especiais, de alegria </p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a segunda série, turma E. Nós somos super
-                unidos e a turma favorita por todos os professores que nos ajudam!</p>
+            <p class="escola-texto-dois">Oferecer para seu publico alvo um ambiente limpo e agradavel onde os clientes se sintam acolhidos e confortaveis!</p>
         </div>
         <img src="./img/doceria.jpg" alt="imagem da confeitaria" class="doceria-imagem">
 
