--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section class="escola">
             <div class="escola-div-conteudo">
                 <h2 class="escola-titulo"> Sobre minha empresa </h2>
-            <p class="escola-texto-um"> A empresa foi fundada em 2020 com intuição de fornecer produtos e serviços de altissima qualidade para proporcionar aos nossos clientes momentos especiais, de alegria </p>
+            <p class="escola-texto-um"> A empresa foi fundada em 2020 com intuição de fornecer produtos e serviços de altissima qualidade para proporcionar aos nossos clientes momentos especiais, de alegria.</p>
             <p class="escola-texto-dois">Oferecer para seu publico alvo um ambiente limpo e agradavel onde os clientes se sintam acolhidos e confortaveis!</p>
         </div>
         <img src="./img/doceria.jpg" alt="imagem da confeitaria" class="doceria-imagem">
@@ -172,8 +172,8 @@
     
                             <div class="descricao">
                                 <h3 class="descricao__titulo">Talvez você também se interesse por... </h3>
-                                <h2 class="descricao__titulo-produto">Aulas Particulares</h2>
-                                <p class="descricao__texto"> Aulas particulares de Matemática, Pensamento Computacional, Robótica, Programação em HTML, CSS e Javascript</p>
+                                <h2 class="descricao__titulo-produto">Curso profissionais de confeitaria</h2>
+                                <p class="descricao__texto"> </p>
                             </div>
                             
                             <img src="./img/promocao.png" alt="Foto da promoção" class="descricao__imagem">
