--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <div class="swiper-slide"><img src="./img/brownie.jpeg" alt="brownie"></div>
                         <div class="swiper-slide"><img src="./img/comofazerbolonopote3.jpg" alt="bolo de pote"></div>
                         <div class="swiper-slide"><img src="./img/DSC_8059-600x450.jpg" alt="bolo"></div>
-                        <div class="swiper-slide"><img src="./img/palha-italiana-receita.webp" alt="palha italiana">
+                        <div class="swiper-slide"><img src="./img/palha-italiana-receita.webp" alt="palha italiana"></div>
                     
                         </div>
                         
