--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header class="cabecalho">
-        <div class="container">
+        <div class="container1">
             <input type="checkbox"  id="menu"    class="container__botao">
             <label for="menu">
                 <span class="cabecalho__menu  container__imagem"> </span> 
@@ -61,7 +61,7 @@
 
         </ul>
 
-        <div class="container" id="container__left">
+        <div class="container1" id="container__left">
             <a href="#"> <img id="favorito-header" class="cabecalho-imagem cabecalho__favorito header__favorito" src="./img/favoritos.svg" alt="Meus favoritos"> </a>
             <a href="#" class="container__link" >
                 <img class="cabecalho-imagem" src="./img/compras.svg" alt="Carrinho de compras">
