--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
       
             <img class="cabecalho-imagem  container__imagem" src="img/logo.png" alt="logo Empresa">
-            <h1 class="container-titulo"> Doceria da Loh</h1>
+            <h1 class="container-titulo"> Tempeos Da Jaque</h1>
         </div>
 
         <ul class="opcoes">
@@ -56,8 +56,6 @@
                 </li>
             </ul>
 
-            <li class="opcoes__item"><a href="#" class="opcoes__link">  Escola  </a> </li>
-            <li class="opcoes_item"><a href="#" class="opcoes__link">  Estudante  </a></li>
 
         </ul>
 
